--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+nav ul li {
+  @apply border-2 border-black;
+}
+
+nav ul {
+  @apply border-2 border-red-500;
+}
